# CodeFestAdAstra2022

./: .gitignore  LICENSE  README  README.md  pyproject.toml  setup.py
codefestadastra/: processing.py
codefestpylapackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_processing.ipynb  test_processing.py
tests/image_test/: file_example_TIFF_10MB.tiff  preview_file_example_TIFF_10MB.tiff
tests/tests_results/: offuscated_test1.tiff
