[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codefestpylapackage"
version = "0.0.1"
authors = [
  { name="Juanpablo Barriga", email="jp.barriga@uniandes.edu.co" },
  { name="Andrés Ochoa", email="a.ochoap@uniandes.edu.co" },
  { name="Andres Ariza", email="a.ariza@uniandes.edu.co" },
  { name="Geisson Ponce", email="gs.ponce20@uniandes.edu.co" },
]
description = "The codefest Pyla package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AmOchoat/CodeFestAdAstra2022"
"Bug Tracker" = "https://github.com/AmOchoat/CodeFestAdAstra2022Issues"